# sonobe

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/scripts/: wasm-target-test-build.sh
.github/workflows/: ci.yml  typos.toml
assets/: g16_data  g16_proof  kzg_data  nova_cyclefold_data
benches/: README.md  bench_sumcheck.rs  common.rs  hypernova.rs  mova_matrix.rs  nova.rs  protogalaxy.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  settings.rs
examples/: circom_full_flow.rs  circom_full_flow_with_custom_code.rs  external_inputs.rs  fold_sha256.rs  full_flow.rs  mova_matrix_memory.rs  multi_inputs.rs  noir_full_flow.rs  noname_full_flow.rs  nova.rs  sha256.rs  simple.rs  utils.rs
experimental-frontends/: Cargo.toml  README.md
experimental-frontends/src/: lib.rs  utils.rs
experimental-frontends/src/circom/: mod.rs  utils.rs
experimental-frontends/src/circom/test_folder/: compile.sh
experimental-frontends/src/noir/: bridge.rs  mod.rs
experimental-frontends/src/noir/test_folder/: compile.sh
experimental-frontends/src/noir/test_folder/test_mimc/src/: main.nr
experimental-frontends/src/noir/test_folder/test_no_external_inputs/: Nargo.toml
experimental-frontends/src/noname/: bridge.rs  mod.rs  utils.rs
folding-schemes/: Cargo.toml  ivc_proof-hypernova.serialized  ivc_proof-protogalaxy.serialized
folding-schemes-solidity/: Cargo.toml  README.md
folding-schemes-solidity/src/: evm.rs  lib.rs
folding-schemes/examples/: external_inputs.rs  fold_sha256.rs  multi_inputs.rs  multiple_inputs.rs  sha256.rs  utils.rs
folding-schemes/src/: constants.rs  lib.rs  pedersen.rs  prebuilds.rs
folding-schemes/src/arith/: ccs.rs  mod.rs  r1cs.rs  vanilla_plonk.rs
folding-schemes/src/arith/ccs/: circuits.rs  mod.rs
folding-schemes/src/arith/r1cs/: circuits.rs  mod.rs
folding-schemes/src/ccs/: mod.rs  r1cs.rs
folding-schemes/src/commitment/: ipa.rs  kzg.rs  mod.rs  pedersen.rs
folding-schemes/src/folding/: mod.rs  temp2.rs  traits.rs
folding-schemes/src/folding/circuits/: cyclefold.rs  matrixvec.rs  mod.rs  nonnative.rs  sum_check.rs  utils.rs
folding-schemes/src/folding/circuits/decider/: mod.rs  off_chain.rs  on_chain.rs
folding-schemes/src/folding/circuits/nonnative/: affine.rs  mod.rs  uint.rs
folding-schemes/src/folding/hypernova/: cccs.rs  circuit.rs  circuits.rs  decider_eth.rs  decider_eth_circuit.rs  lcccs.rs  mod.rs  nimfs.rs  serialize.rs  serializers.rs  utils.rs
folding-schemes/src/folding/mova/: mod.rs  nifs.rs  pointvsline.rs  traits.rs
folding-schemes/src/folding/nova/: circuits.rs  cyclefold.rs  decider.rs  decider_circuits.rs  decider_eth.rs  decider_eth_circuit.rs  ivc.rs  mod.rs  nifs.rs  ova.rs  serialize.rs  serializers.rs  traits.rs  zk.rs
folding-schemes/src/folding/nova/nifs/: mod.rs  mova.rs  mova_matrix.rs  nova.rs  nova_circuits.rs  ova.rs  ova_circuits.rs  pointvsline.rs
folding-schemes/src/folding/ova/: circuits.rs  mod.rs  nifs.rs
folding-schemes/src/folding/protogalaxy/: circuits.rs  constants.rs  decider_eth.rs  decider_eth_circuit.rs  folding.rs  mod.rs  traits.rs  utils.rs
folding-schemes/src/frontend/: alloc.rs  logup.rs  mod.rs  utils.rs
folding-schemes/src/frontend/circom/: browser.rs  mod.rs  utils.rs
folding-schemes/src/frontend/circom/test_folder/: compile.sh  cubic_circuit.circom  external_inputs.circom  full_flow_example.circom  keccak-chain.circom  test_circuit.circom  test_circuit.r1cs
folding-schemes/src/frontend/circom/test_folder/circuits/: is_zero.circom
folding-schemes/src/frontend/circom/test_folder/keccak256-circom/circuits/: utils.circom
folding-schemes/src/frontend/circom/test_folder/test_circuit_js/: test_circuit.wasm
folding-schemes/src/frontend/noir/: mod.rs
folding-schemes/src/frontend/noir/test_folder/: compile.sh
folding-schemes/src/frontend/noir/test_folder/test_circuit/: Nargo.toml
folding-schemes/src/frontend/noir/test_folder/test_mimc/: Nargo.toml
folding-schemes/src/frontend/noname/: mod.rs  utils.rs
folding-schemes/src/transcript/: mod.rs  poseidon.rs
folding-schemes/src/transcript/poseidon/: bn254.rs  grumpkin.rs
folding-schemes/src/utils/: eth.rs  gadgets.rs  lagrange_poly.rs  mle.rs  mod.rs  vec.rs
folding-schemes/src/utils/espresso/: virtual_polynomial.rs
folding-schemes/src/utils/espresso/sum_check/: mod.rs  prover.rs  structs.rs  verifier.rs
folding-verifier/: Cargo.toml
folding-verifier-solidity/: Cargo.toml
folding-verifier-solidity/assets/: G16_test_proof_data  G16_test_vk_data
folding-verifier-solidity/src/: evm.rs  lib.rs  utils.rs
folding-verifier-solidity/src/utils/: encoding.rs
folding-verifier-solidity/src/verifiers/: mod.rs  templates.rs
folding-verifier-solidity/templates/: BN254.sol  groth16_verifier.sol  groth_16_verifier.sol  kzg_10_verifier.sol
frontend-macro/: Cargo.toml
frontend-macro/src/: lib.rs  main.rs
frontend-macro/tests/: parse.rs  runner.rs
frontends/: Cargo.toml  README.md
frontends/src/: lib.rs
frontends/src/circom/: mod.rs  utils.rs
frontends/src/circom/test_folder/: compile.sh  no_external_inputs.circom  with_external_inputs.circom
frontends/src/noir/: bridge.rs  mod.rs
frontends/src/noir/test_folder/test_circuit/src/: main.nr
frontends/src/noir/test_folder/test_mimc/: Nargo.toml
frontends/src/noir/test_folder/test_mimc/src/: main.nr
frontends/src/noir/test_folder/test_no_external_inputs/src/: main.nr
frontends/src/noname/: bridge.rs  mod.rs  utils.rs
solidity-verifier/: Cargo.toml  README.md
solidity-verifier/src/: main.rs  settings.rs
solidity-verifiers/: Cargo.toml  README.md  askama.toml
solidity-verifiers/src/: calldata.rs  evm.rs  lib.rs
solidity-verifiers/src/utils/: calldata.rs  encoding.rs  mod.rs
solidity-verifiers/src/verifiers/: g16.rs  kzg.rs  mod.rs  nova_cyclefold.rs
solidity-verifiers/templates/: groth16_verifier.askama.sol  header_template.askama.sol  kzg10_verifier.askama.sol  nova_cyclefold_decider.askama.sol
src/: constants.rs  lib.rs  pedersen.rs  sum_check.rs  sum_check_unstable.rs  transcript.rs
src/ccs/: mod.rs  r1cs.rs
(+73 files in other folders)
