[workspace]
members = [
    "folding-schemes",
    "solidity-verifiers",
    "cli",
    "experimental-frontends"
]
resolver = "2"


[patch.crates-io]
ark-r1cs-std = {git = "https://github.com/yelhousni/r1cs-std", branch="perf/sw"}

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/privacy-scaling-explorations/sonobe/"

[workspace.dependencies]
acvm = { git = "https://github.com/winderica/noir", branch = "arkworks-next", default-features = false }
askama = { version = "0.12.0", default-features = false }
clap = { version = "4.4" }
clap-verbosity-flag = { version = "2.1" }
criterion = { version = "0.5" }
env_logger = { version = "0.10" }
getrandom = { version = "0.2" }
log = { version = "0.4" }
noname = { git = "https://github.com/dmpierre/noname" }
num-bigint = { version = "0.4.3" }
num-integer = { version = "0.1" }
pprof = { version = "0.13" }
serde = { version = "^1.0.0" }
serde_json = { version = "^1.0.0" }
sha3 = { version = "0.10" }
rand = { version = "0.8.5" }
rayon = { version = "1" }
revm = { version = "19.5.0", default-features = false }
rust-crypto = { version = "0.2" }
thiserror = { version = "1.0" }

# Arkworks family
ark-bn254 = { version = "^0.5.0", default-features = false }
ark-circom = { git = "https://github.com/winderica/circom-compat", branch = "arkworks-next", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false }
ark-groth16 = { version = "^0.5.0" }
ark-grumpkin = { version = "^0.5.0", default-features = false }
ark-mnt4-298 = { version = "^0.5.0" }
ark-mnt6-298 = { version = "^0.5.0" }
ark-pallas = { version = "^0.5.0" }
ark-poly = { version = "^0.5.0", default-features = false }
ark-poly-commit = { version = "^0.5.0" }
ark-r1cs-std = { version = "^0.5.0", default-features = false }
ark-relations = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0" }
ark-snark = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
ark-vesta = { version = "^0.5.0" }

# Local crates
experimental-frontends = { path = "experimental-frontends" }
folding-schemes = { path = "folding-schemes" }
solidity-verifiers = { path = "solidity-verifiers" }
