[package]
name = "solidity-verifiers-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-serialize = "^0.5.0"
solidity-verifiers = { path = "../solidity-verifiers" }
clap = { version = "4.4", features = ["derive", "string"] }
clap-verbosity-flag = "2.1"
env_logger = "0.10"

[features]
default = ["parallel"]
parallel = ["solidity-verifiers/parallel"]