[package]
name = "solidity-verifiers-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-serialize = { workspace = true }
solidity-verifiers = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
clap-verbosity-flag = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["parallel"]
parallel = ["solidity-verifiers/parallel"]