[package]
name = "experimental-frontends"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-ff = { workspace = true, features = ["parallel", "asm"] }
ark-std = { workspace = true, features = ["parallel"] }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true, features = ["parallel"] }
ark-serialize = { workspace = true }
ark-circom = { workspace = true }
num-bigint = { workspace = true }
noname = { workspace = true }
acvm = { workspace = true }
folding-schemes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true, features = ["r1cs"] }

# This allows the crate to be built when targeting WASM.
# See more at: https://docs.rs/getrandom/#webassembly-support 
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[features]
default = ["ark-circom/default", "parallel"]
parallel = []
wasm = ["ark-circom/wasm"]
