[package]
name = "folding-schemes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel", "asm"] }
ark-poly = { workspace = true, features = ["parallel"] }
ark-std = { workspace = true, features = ["parallel"] }
ark-crypto-primitives = { workspace = true, features = ["r1cs", "sponge", "crh", "parallel"] }
ark-poly-commit = { workspace = true, features = ["parallel"] }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true, features = ["parallel"] }
ark-snark = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true, features = ["parallel"] }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
sha3 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
ark-pallas = { workspace = true, features = ["r1cs"] }
ark-vesta = { workspace = true, features = ["r1cs"] }
ark-bn254 = { workspace = true, features = ["r1cs"] }
ark-grumpkin = { workspace = true, features = ["r1cs"] }
# Note: do not use the MNTx_298 curves in practice due security reasons, here
# we only use them in the tests.
ark-mnt4-298 = { workspace = true, features = ["r1cs"] }
ark-mnt6-298 = { workspace = true, features = ["r1cs"] }
rand = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }

# for benchmarks
criterion = { workspace = true }
pprof = { workspace = true, features = ["criterion", "flamegraph"] }

# This allows the crate to be built when targeting WASM.
# See more at: https://docs.rs/getrandom/#webassembly-support 
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[features]
default = ["parallel"]
parallel = []
light-test = []


[[bench]]
name = "nova"
path = "../benches/nova.rs"
harness = false

[[bench]]
name = "hypernova"
path = "../benches/hypernova.rs"
harness = false

[[bench]]
name = "protogalaxy"
path = "../benches/protogalaxy.rs"
harness = false

[[example]]
name = "sha256"
path = "../examples/sha256.rs"

[[example]]
name = "multi_inputs"
path = "../examples/multi_inputs.rs"

[[example]]
name = "external_inputs"
path = "../examples/external_inputs.rs"
