[package]
name = "folding-verifier-solidity"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-groth16 = "0.4"
askama = { version = "0.12.0", features = ["config"], default-features = false }
ark-bn254 = "0.4.0"

[dev-dependencies]
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[features]
default = ["parallel"]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    ]



