[package]
name = "folding-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "^0.4.0"
ark-ff = "^0.4.0"
ark-poly = "^0.4.0"
ark-std = "^0.4.0"



[dev-dependencies]
ark-bn254 = "0.4.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[features]
default = ["parallel"]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    ]



