[package]
name = "frontends"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-serialize = { version = "^0.5.0", default-features = false }
ark-circom = { git = "https://github.com/winderica/circom-compat", branch = "arkworks-next", default-features = false }
num-bigint = "0.4"
noname = { git = "https://github.com/dmpierre/noname" }
acvm = { git = "https://github.com/winderica/noir", branch = "arkworks-next", default-features = false }
folding-schemes = { path = "../folding-schemes/"}
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"

[dev-dependencies]
ark-bn254 = { version="^0.5.0", features=["r1cs"]}

# This allows the crate to be built when targeting WASM.
# See more at: https://docs.rs/getrandom/#webassembly-support 
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["ark-circom/default", "parallel"]
parallel = []
wasm = ["ark-circom/wasm"]
