[package]
name = "solidity-verifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-groth16 = "0.4"
askama = { version = "0.12.0", features = ["config"], default-features = false }
ark-bn254 = "0.4.0"
ark-poly-commit = "0.4.0"
itertools = "0.12.1"
ark-serialize = "0.4.1"
revm = {version="3.5.0", default-features=false, features=["std"]}
rust-crypto = "0.2"
num-bigint = "0.4.3"
folding-schemes = { path = "../folding-schemes/"} # without 'light-test' enabled

[dev-dependencies]
ark-crypto-primitives = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
ark-bn254 = {version="0.4.0", features=["r1cs"]}
ark-grumpkin = {version="0.4.0", features=["r1cs"]}
rand = "0.8.5"
# use the diverse frontend features for the examples
folding-schemes = { path = "../folding-schemes/", features=["light-test", "circom", "noname", "noir"]}
noname = { git = "https://github.com/dmpierre/noname" }

[features]
default = ["parallel"]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    ]


[[example]]
name = "full_flow"
path = "../examples/full_flow.rs"

[[example]]
name = "circom_full_flow"
path = "../examples/circom_full_flow.rs"

[[example]]
name = "noname_full_flow"
path = "../examples/noname_full_flow.rs"

[[example]]
name = "noir_full_flow"
path = "../examples/noir_full_flow.rs"
