[package]
name = "solidity-verifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-groth16 = "^0.5.0"
ark-bn254 = "^0.5.0"
ark-poly-commit = "^0.5.0"
ark-serialize = "^0.5.0"
askama = { version = "0.12.0", features = ["config"], default-features = false }
revm = {version="3.5.0", default-features=false, features=["std"]}
rust-crypto = "0.2"
num-bigint = "0.4.3"
folding-schemes = { path = "../folding-schemes/"} # without 'light-test' enabled

[dev-dependencies]
ark-ec = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "^0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = ["sponge", "parallel"] }
ark-snark = { version = "^0.5.0", default-features = false }
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-grumpkin = { version = "^0.5.0", default-features = false }
folding-schemes = { path = "../folding-schemes/", features=["light-test"]}
frontends = { path = "../frontends/"}
noname = { git = "https://github.com/dmpierre/noname" }

[features]
default = ["parallel"]

parallel = [ 
    "ark-groth16/parallel", 
    "ark-poly-commit/parallel",  
    "folding-schemes/parallel",
]

[[example]]
name = "full_flow"
path = "../examples/full_flow.rs"

[[example]]
name = "circom_full_flow"
path = "../examples/circom_full_flow.rs"

[[example]]
name = "noname_full_flow"
path = "../examples/noname_full_flow.rs"

[[example]]
name = "noir_full_flow"
path = "../examples/noir_full_flow.rs"

