[package]
name = "solidity-verifiers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true, features = ["r1cs"] }
ark-poly-commit = { workspace = true }
ark-serialize = { workspace = true }
askama = { workspace = true, features = ["config"] }
revm = { workspace = true, features = ["std"] }
rust-crypto = { workspace = true }
num-bigint = { workspace = true }
folding-schemes = { workspace = true } # without 'light-test' enabled

[dev-dependencies]
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel", "asm"] }
ark-std = { workspace = true, features = ["parallel"] }
ark-crypto-primitives = { workspace = true, features = ["sponge", "parallel"] }
ark-snark = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true, features = ["parallel"] }
ark-grumpkin = { workspace = true, features = ["r1cs"] }
folding-schemes = { workspace = true, features = ["light-test"] }
experimental-frontends = { workspace = true }
noname = { workspace = true }

[features]
default = ["parallel"]

parallel = [
    "ark-groth16/parallel",
    "ark-poly-commit/parallel",
    "folding-schemes/parallel",
]

[[example]]
name = "full_flow"
path = "../examples/full_flow.rs"

[[example]]
name = "circom_full_flow"
path = "../examples/circom_full_flow.rs"

[[example]]
name = "noname_full_flow"
path = "../examples/noname_full_flow.rs"

[[example]]
name = "noir_full_flow"
path = "../examples/noir_full_flow.rs"

